<resources>
    <string name="app_name">RoboRehab</string>
    <string name="name_hint">Enter Name</string>
    <string name="username_hint">Enter Email</string>
    <string name="password_hint">Enter Password</string>
    <string name="age_hint">Enter Age</string>
    <string name="sex_hint">Enter Sex</string>
    <string name="description_hint">Describe the patient\'s condition</string>
    <string name="login_text">Login</string>
    <string name="train_text">Train</string>
    <string name="stop_train_text">Stop Training</string>
    <string name="refresh_text">Refresh</string>
    <string name="calibrate_text">Calibrate</string>
    <string name="delete_profile_text">Delete</string>
    <string name="delete_profiles_text">Delete All</string>
    <string name="title_activity_doctor">Doctor Home</string>
    <string name="login_failed">Oops! Wrong email or password!</string>
    <string name="login_successful">Successfully logged in!</string>
    <string name="signup_text"> Don\'t have an account? Create one! </string>
    <string name="title_activity_signup">Sign up</string>
    <string name="title_activity_patient">PatientActivity</string>
    <string name="action_settings">Settings</string>
    <string name="profiles_heading_text">Exercise Profiles</string>
    <string name="dv_text">Distance Visualisation</string>
    <string name="rv_text">Repetition Visualisation</string>
</resources>
