<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="edu.somaiya.physiodevice.MainActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.constraint.Guideline
            android:id="@+id/left_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.2" />

        <android.support.constraint.Guideline
            android:id="@+id/right_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.8" />

        <TextView
            android:id="@+id/app_name_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textSize="@dimen/huge_font_size"
            app:layout_constraintBottom_toTopOf="@id/username_edit_text"
            app:layout_constraintLeft_toLeftOf="@id/left_guideline"
            app:layout_constraintRight_toRightOf="@id/right_guideline"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/username_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/username_hint"
            android:textSize="@dimen/small_font_size"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="@id/left_guideline"
            app:layout_constraintRight_toRightOf="@id/right_guideline"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/password_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:textSize="@dimen/small_font_size"
            app:layout_constraintLeft_toLeftOf="@id/left_guideline"
            app:layout_constraintRight_toRightOf="@id/right_guideline"
            app:layout_constraintTop_toBottomOf="@id/username_edit_text" />

        <Button
            android:id="@+id/login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:text="@string/login_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="@id/left_guideline"
            app:layout_constraintRight_toRightOf="@id/right_guideline"
            app:layout_constraintTop_toBottomOf="@id/password_edit_text" />

        <TextView
            android:id="@+id/signup_link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signup_text"
            android:textSize="@dimen/small_font_size"
            app:layout_constraintLeft_toLeftOf="@id/left_guideline"
            app:layout_constraintRight_toRightOf="@id/right_guideline"
            app:layout_constraintTop_toBottomOf="@id/login_button" />

    </android.support.constraint.ConstraintLayout>
</android.support.design.widget.CoordinatorLayout>